adding changes to swagger documentation the auth part signup and login
